Closed Bug 334217 Opened 19 years ago Closed 19 years ago

Armenian unicode characters are not accessible anymore

Categories

(Firefox :: General, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: maxime.goepp, Assigned: emk)

References

()

Details

(Keywords: regression, verified1.8.0.5, verified1.8.1)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr; rv:1.8.0.2) Gecko/20060308 Firefox/1.5.0.2 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr; rv:1.8.0.2) Gecko/20060308 Firefox/1.5.0.2 with the last update of firefox, the armenians caracters are not available anymore. they appear now like this "?" ! Reproducible: Always Steps to Reproduce: <ul id="topo"><li>(armenian) Anarzaba: &#1575;&#1398;&#1377;&#1408;&#1382;&#1377;&#1378;</li><li>(arabic) Aïn Zarba: &#1593;&#1610;&#1606; &#1586;&#1585;&#1576;&#1575;</li></ul> Actual Results: only bad caracters for the armenian part of the text. here is the complete alphabet : http://www.alanwood.net/unicode/armenian.html
Does your Tools-Options-Content-Fonts & Colors-Advanced-Armenian have the correct armenian font on your system?
I did not change anything on the different computers i use. With the new firefox, all the armenian caracters are trasnformed into "?". With the older version, there is no problem.
(In reply to comment #2) > I did not change anything on the different computers i use. With the new > firefox, You changed the Fx version. Fx 1.5.0.2+ changed the font search method, hence the fonts may not be found unless you specified explicitly. So, what's your armenian settings on Fx? Is it installed on your system? Does it have the armenian characters?
I imagine the armenian caracters are on all the machinesi saw because a few days before and even now with 1.5.0.1, i can see them every where. if we have to change manualy something in the gestion of the font 1.5.0.2 to be abble to see these caracters, it's a realy big proglem, because there are lot's of website that are written with text in armenian, and today, it's impossible to read them ... to do it, U have to use IE, Opera or Safari .. but our favorite browser ... not anymore (In reply to comment #3) > (In reply to comment #2) > > I did not change anything on the different computers i use. With the new > > firefox, > You changed the Fx version. > Fx 1.5.0.2+ changed the font search method, hence the fonts may not be found > unless you specified explicitly. > So, what's your armenian settings on Fx? Is it installed on your system? Does > it have the armenian characters? >
after the visit of this page, http://www.columbia.edu/kermit/utf8.html , every thing work fine. it changed something automaticly in my configuration, but i don't know what. I'm sure it's the fonts configuration but how did it works ?? i'va looked at the code, and there is nothing particular, no script, no css ... any idea ? fact is that i want to reproduce this comportment with my webages, so that the armenian caracters can "always" be visible,
Attached patch patchSplinter Review
This is a regression of bug 311378. FindCharUnicodeRange() didn't find Armenian characters correctly.
Assignee: nobody → VYV03354
Status: UNCONFIRMED → ASSIGNED
Attachment #220625 - Flags: superreview?(rbs)
Attachment #220625 - Flags: review?(rbs)
Attachment #220625 - Flags: approval-branch-1.8.1?(rbs)
Blocks: 311378
Keywords: regression
Comment on attachment 220625 [details] [diff] [review] patch Go for it.
Attachment #220625 - Flags: superreview?(rbs)
Attachment #220625 - Flags: superreview+
Attachment #220625 - Flags: review?(rbs)
Attachment #220625 - Flags: review+
Attachment #220625 - Flags: approval-branch-1.8.1?(rbs)
Attachment #220625 - Flags: approval-branch-1.8.1+
Sorry, but i don't understand what happened ? how can we use this patch ? (In reply to comment #7) > (From update of attachment 220625 [details] [diff] [review] [edit]) > Go for it. >
checked-in. Should this go to 1.8.0 branch?
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
Ok, i'll test it tonight, regards, (In reply to comment #10) > GOEPP: > Would you test with latest nightly 1.8 branch? > ftp://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/pacifica-mozilla1.8/ >
Summary: armenian unicode caracters are not accessible anymore → Armenian unicode characters are not accessible anymore
with 2.0a1 version (Bon Echo), the bug is corrected,
-> v. per comment 12.
Status: RESOLVED → VERIFIED
Keywords: fixed1.8verified1.8
Comment on attachment 220625 [details] [diff] [review] patch This is a serious regression for Armenian users.
Attachment #220625 - Flags: approval1.8.0.5?
Flags: blocking1.8.0.5?
Changing keyword to reflect that it was checked in on the 1.8.1 branch.
Comment on attachment 220625 [details] [diff] [review] patch approved for 1.8.0 branch, a=dveditz for drivers
Attachment #220625 - Flags: approval1.8.0.5? → approval1.8.0.5+
Flags: blocking1.8.0.5? → blocking1.8.0.5+
*** Bug 337668 has been marked as a duplicate of this bug. ***
Thank you, Kimura-san.
Keywords: fixed1.8.0.5
verified with: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.5) Gecko/20060620 Firefox/1.5.0.5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: