Bug 334217 armenian unicode caracters are not accessible anymore. patch by Masatoshi Kimura (:emk) <VYV03354@nifty.ne.jp> r+sr=rbs